[metadata]
name = bodywalk
version = 1.0.0
author = Luciano Di Palma
description = Markov Chain samplers for general convex bodies
long_description = file: README.md
license = BSD 3-Clause License
keywords= sampling, markov chain, convex body, hit-and-run

[options]
python_requires = >=3.9
install_requires =
    numpy
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
